@@ -27,6 +27,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fixed a problem with cpusets where if a boot cpuset is present under /dev/cpuset
       torque would only write out 1024 cpus. This was changed from a hardcoded
       value to be the maximum size found in /dev/cpuset/cpus. TRQ-840
+  b - Fix so child pbs_mom does not remain running after qdel on slow starting job.
+      TRQ-860. (backported from 4.0.1)
 
 3.0.4
   c - fix a buffer being overrun with nvidia gpus enabled
